- Refactored and improved the velocity to only few seconds. - Some real data cases matches, other fails by few numbers. Pending to find the corner case with these cases (and my case) to solve Part 2.

--- a/y.2023/Day05/Day05.csproj
+++ b/y.2023/Day05/Day05.csproj
@@ -20,6 +20,21 @@
       <Content Include="InputCarles.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </Content>
+      <None Remove="Input5.txt" />
+      <Content Include="Input_LLuis.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+      <None Remove="Input_Enric.txt" />
+      <Content Include="Input_Enric.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Remove="Input_Carmen.txt" />
+      <Content Include="Input_Carmen.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
     </ItemGroup>
 
 </Project>
