- Day 10 Part 1 solved. - Pending Part 2 (WIP)

--- a/y.2023/Day10/Day10.csproj
+++ b/y.2023/Day10/Day10.csproj
@@ -16,6 +16,11 @@
       <None Include="InputExample.txt">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Remove="InputCarles.txt" />
+      <Content Include="InputCarles.txt">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </Content>
+      <None Remove="InputEnric.txt" />
     </ItemGroup>
 
 </Project>
